--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "student-john" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "student-john" ]
 
 permissions:
   contents: read
